navbar logo added

--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,10 +1,13 @@
 <nav class="flex items-center justify-between p-4 bg-[#262734] h-16 shadow-lg">
   <!-- Logo -->
   <div class="flex items-center text-white text-2xl font-semibold">
-    <div class="flex items-center relative pr-2">
-      <span class="absolute left-[-10px] h-full w-0.5 bg-gradient-to-b from-orange-500 to-orange-700"></span>
-      <span>ETIYA</span>
-    </div>
+    <div class="flex items-center">
+    <img 
+      src="assests/logo.png" 
+      alt="Etiya Logo" 
+      class="w-[99px] h-[25.77px] object-contain ml-2 mt-[2px]"
+    />
+  </div>
     <div class="flex items-center pl-3 border-l-2 border-orange-500 text-orange-500 font-normal ml-1">
       <span>CRMlite</span>
     </div>
